--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-view-header theme-dark show-ribbon image-captions-enabled obsidian-themepocalypse css-settings-manager sidebar-hide sides-tabs-hover nav-header-hover root-tabs-hover color-scheme-default dm-color-scheme-default lm-color-scheme-default folder-notes-plugin hide-folder-note folder-note-underline folder-note-underline-path fn-whitespace-stop-collapsing version-1-7-2 is-focused
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager sidebar-hide sides-tabs-hover nav-header-hover root-tabs-hover color-scheme-default dm-color-scheme-default lm-color-scheme-default folder-notes-plugin hide-folder-note folder-note-underline folder-note-underline-path fn-whitespace-stop-collapsing version-1-7-2 obsidian-themepocalypse is-focused
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/technerium/obsidian-ukiyo/HEAD/theme.css
 BASE_THEME=dark
