--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=FungusPunk
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL=funguspunkartrepo.vercel.app
+SITE_BASE_URL=funguspunk.art
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
